--- a/QBCustomer/appsettings.json
+++ b/QBCustomer/appsettings.json
@@ -2,7 +2,7 @@
   "appSettings": {
     "clientid": "AB1ehE33TOi3urMxkELzewKiTjyDeSY0P3FcHhK8ssRGs3o0Kf",
     "clientsecret": "bNDul29EYvcdh5wPsSYODx1mMbPs5uOzF9HYmdvY",
-    "redirectUrl": "https://localhost:7145/smartBook/getToken",
+    "redirectUrl": "https://localhost:5001/api/QB/getToken",
     "appEnvironment": "sandbox"
   },
 
@@ -10,11 +10,10 @@
     "SmartBooks": "server=.\\SqlExpress;Database=SmartBooks;Trusted_Connection=True;TrustServerCertificate=True"
   },
 
-
   "Jwt": {
     "SecretKey": "Th1s_1s_A_V3ry_L0ng_S3cur3_Secr3t_K3y_F0r_JWT_2024!",
-    "Issuer": "yourIssuer",
-    "Audience": "yourAudience"
+    "Issuer": "QBCustomer",
+    "Audience": "SBClient"
   },
 
   "AzureAd": {
