--- a/SBClient/appsettings.json
+++ b/SBClient/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "appSettings": {
+    "apiUrl": "https://localhost:5001/api"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
